# ggems

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  Makefile  README  README.md  ggems.sh  ggems_compiler.py  install.py  install_cmake.sh  setup.py  setup.sh  todo.txt
alphadev/: em_calculator.cuh  geom_source.cuh  vox_phan_dosi_fastnav.cu  vox_phan_dosi_fastnav.cuh  vox_phan_img_nav.cu  vox_phan_img_nav.cuh  vox_phan_img_vrt_nav.cu  vox_phan_img_vrt_nav.cuh  vox_phan_ivrt_nav.cu  vox_phan_ivrt_nav.cuh  vox_phan_vrt_nav.cu  vox_phan_vrt_nav.cuh
cmake-config/: FindGLFW3.cmake  GGConfiguration.hh.in  GGEMSConfiguration.hh.in  ggems_configuration.hh.in
data/: sandia_table.cu  sandia_table.cuh  shell_data.cu  shell_data.cuh
detector/: digitizer.cu  digitizer.cuh  dosimetry.cu  dosimetry.cuh  dosimetry.h  flat_panel_detector.cu  flat_panel_detector.cuh  singles.cuh
detectors/: ct_detector.cu  ct_detector.cuh  detector_manager.cu  detector_manager.cuh  dose_calculator.cu  dose_calculator.cuh  dosimetry_actor.cu  dosimetry_actor.cuh  dosimetry_analog.cu  dosimetry_analog.cuh  dosimetry_manager.cu  dosimetry_manager.cuh  flatpanel_detector.cu  flatpanel_detector.cuh  ggems_detector.cu  ggems_detector.cuh  scatterSimulator.cu  scatterSimulator.cuh  template_detector.cu  template_detector.cuh
doc/: Makefile  make.bat
docs/: Doxyfile  Doxyfile_dev  mycustomdoxygen.css
examples/: CMakeLists.txt
examples/0_Cross_Sections/: CMakeLists.txt  cross_sections.cc  cross_sections.py  photon_cross_section.py
examples/0_Cross_Sections/data/: materials.txt
examples/1_Total_Attenuation/: CMakeLists.txt  total_attenuation.py
examples/1_Total_Attenuation/data/: materials.txt
examples/2_CT_Scanner/: CMakeLists.txt  ct_scanner.cc  ct_scanner.py  generate_phantom.py
examples/2_CT_scanner/: CMakeLists.txt  ct_scanner.cc  ct_scanner.py  generate_phantom.py
examples/2_Water_Box/: generate_waterbox.py  waterbox.py
examples/3_Voxelized_Phantom_Generator/: CMakeLists.txt  generate_volume.cc  generate_volume.py
examples/4_Dosimetry_Photon/: CMakeLists.txt  dosimetry_photon.cc  dosimetry_photon.py  generate_phantom.py
examples/5_World_Tracking/: CMakeLists.txt  world_tracking.cc  world_tracking.py
examples/5_World_Tracking/data/: materials.txt
examples/6_Multi_Platform/: CMakeLists.txt  multi_platform.cc  multi_platform.py
examples/6_Visualization/: CMakeLists.txt  visualization.cc  visualization.py
examples/6_Visualization/data/: materials.txt
examples/7_Mesh/: CMakeLists.txt  anode_heel_effect_model.py  mesh.cc  mesh.py
examples/7_Mesh/data/: gbr_model.pkl  scaler.pkl
examples/8_Voxelized_Source/: voxelized_source.py
geometries/: aabb.cu  aabb.cuh  base_object.cu  base_object.cuh  materials.cu  materials.cuh  obb.cu  obb.cuh  primitives.cu  primitives.cuh  voxelized.cu  voxelized.cuh
geometry/: Makefile  aabb.cu  aabb.cuh  aabb.h  base_object.cu  base_object.cuh  builder.cu  builder.cuh  builder.h  colli.cu  colli.cuh  geometry_builder.cu  geometry_builder.cuh  materials.cu  materials.cuh  materials.h  meshed.cu  meshed.cuh  meshed.h  obb.cu  obb.cuh  spect_head.cu  spect_head.cuh  sphere.cu  sphere.cuh  sphere.h  voxelized.cu  voxelized.cuh  voxelized.h  vrml.cu  vrml.cuh  yva.cu  yva.cuh
global/: ggems.cu  ggems.cuh  ggems.h  global.cu  global.cuh
kernel/: print_primary_particle.cl  prng.hh
maths/: Makefile  fun.cu  fun.cuh  fun.h  mathplot.cu  mathplot.cuh  prng.cu  prng.cuh  prng.h  raytracing.cu  raytracing.cuh  raytracing.h  vector.cu  vector.cuh  vector.h
navigation/: Makefile  electron_navigator.cuh  main_navigator.cu  main_navigator.cuh  photon_navigator.cu  photon_navigator.cuh  proton_navigator.cuh
navigators/: electron_navigator.cu  electron_navigator.cuh  ggems_phantom.cu  ggems_phantom.cuh  ggems_vphantom.cu  ggems_vphantom.cuh  mesh_phan_linac_nav.cu  mesh_phan_linac_nav.cuh  phantom_manager.cu  phantom_manager.cuh  photon_navigator.cu  photon_navigator.cuh  transport_navigator.cu  transport_navigator.cuh  vox_phan_dosi.cu  vox_phan_dosi.cuh  vox_phan_dosi_fastnav.cu  vox_phan_dosi_nav.cu  vox_phan_dosi_nav.cuh  vox_phan_gtrack_nav.cu  vox_phan_gtrack_nav.cuh  vox_phan_img_nav.cu  vox_phan_img_nav.cuh  vox_phan_iort_nav.cu  vox_phan_iort_nav.cuh
processes/: Makefile  constants.cuh  constants.h  cross_sections.cu  cross_sections.cuh  cross_sections_builder.cu  cross_sections_builder.cuh  electron.cu  electron.cuh  mu_data.cuh  particles.cu  particles.cuh  photon.cu  photon.cuh  physical_constants.cuh  proton.cu  proton.cuh  range_cut.cu  range_cut.cuh  sandia_table.cu  sandia_table.cuh  shell_data.cu  shell_data.cuh  structures.cu  structures.cuh  structures.h
python_module/: __init__.py  ggems.py  ggems_attenuation.py  ggems_dosimetry.py  ggems_lib.py  ggems_materials.py  ggems_navigators.py  ggems_opencl.py  ggems_opengl.py  ggems_phantom_creator.py  ggems_phantoms.py  ggems_processes.py  ggems_profiler.py  ggems_ram.py  ggems_sources.py  ggems_systems.py  ggems_volume_creator.py
python_module_save/: ggems_lib.py  ggems_materials.py  ggems_opencl.py  ggems_phantoms.py  ggems_volume_creator.py
scripts/: ggems.py  phantom.py  test.py
sources/: beamlet_source.cu  beamlet_source.cuh  cone_beam_CT_source.cu  cone_beam_CT_source.cuh  cone_beam_source.cu  cone_beam_source.cuh  cylinder_source.cu  cylinder_source.cuh  geom_source.cu  geom_source.cuh  ggems_source.cu  ggems_source.cuh  ggems_vsource.cu  ggems_vsource.cuh  linac_source.cu  linac_source.cuh  phasespace_source.cu  phasespace_source.cuh  planar_source.cu  planar_source.cuh  point_source.cu  point_source.cuh  source_builder.cu  source_builder.cuh  source_manager.cu  source_manager.cuh  truebeam_source.cu  truebeam_source.cuh  voxelized_source.cu  voxelized_source.cuh
tools/: data_processing.cu  data_processing.cuh  dvh_calculator.cu  dvh_calculator.cuh  em_calculator.cu  em_calculator.cuh  fun.cu  fun.cuh  iaea_io.cu  iaea_io.cuh  image_io.cu  image_io.cuh  image_reader.cu  image_reader.cuh  license.cu  license.cuh  linac_beam_io.cu  mesh_io.cu  (+21 more)
(+505 files in other folders)
