# ************************************************************************
# * This file is part of GGEMS.                                          *
# *                                                                      *
# * GGEMS is free software: you can redistribute it and/or modify        *
# * it under the terms of the GNU General Public License as published by *
# * the Free Software Foundation, either version 3 of the License, or    *
# * (at your option) any later version.                                  *
# *                                                                      *
# * GGEMS is distributed in the hope that it will be useful,             *
# * but WITHOUT ANY WARRANTY; without even the implied warranty of       *
# * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the        *
# * GNU General Public License for more details.                         *
# *                                                                      *
# * You should have received a copy of the GNU General Public License    *
# * along with GGEMS.  If not, see <https://www.gnu.org/licenses/>.      *
# *                                                                      *
# ************************************************************************

#-------------------------------------------------------------------------------
# CMakeLists.txt
#
# CMakeLists.txt - Compile and build the GGEMS examples
#
# Authors :
#   - Julien Bert <julien.bert@univ-brest.fr>
#   - Didier Benoit <didier.benoit@inserm.fr>
#
# Generated on : 2/11/2020
#-------------------------------------------------------------------------------

ADD_SUBDIRECTORY(0_Cross_Sections)
ADD_SUBDIRECTORY(1_Total_Attenuation)
ADD_SUBDIRECTORY(2_CT_Scanner)
ADD_SUBDIRECTORY(3_Voxelized_Phantom_Generator)
ADD_SUBDIRECTORY(4_Dosimetry_Photon)
ADD_SUBDIRECTORY(5_World_Tracking)
ADD_SUBDIRECTORY(6_Visualization)
